<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".Activity.infoActivity">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/background" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="85dp"
                android:src="@drawable/logojava" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginRight="34dp"
                android:layout_marginTop="200dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/h1"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/vazirmatnregular"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:textColor="@color/h1"
                    android:text="@string/description"
                    android:textSize="17sp"
                    android:fontFamily="@font/vazirmatnregular"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="67dp"
                            android:src="@drawable/pin_icon"
                           />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/web_icon"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/address_1"
                            android:textSize="17sp"
                            android:textColor="@color/h1"
                            android:fontFamily="@font/vazirmatnregular"

                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/address_2"
                            android:textSize="17sp"
                            android:textColor="@color/h1"
                            android:fontFamily="@font/vazirmatnregular"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/address_3"
                            android:textSize="17sp"
                            android:textColor="@color/h1"
                            android:fontFamily="@font/vazirmatnregular"
                            />

                        <TextView
                            android:id="@+id/webpage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:textColor="@color/h1"
                            android:text="@string/oxcollective.com"
                            android:textSize="17sp"
                            android:fontFamily="@font/vazirmatnregular"
                            />


                    </LinearLayout>

                </LinearLayout>


                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/closeBtnDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/vazirmatnregular"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/contact_us"
                    android:textColor="@color/buttonText"
                    android:backgroundTint="#CBAB61"
                    android:textAlignment="center"
                    android:layout_marginBottom="24dp"/>

            </LinearLayout>


        </RelativeLayout>

    <ImageView
        android:id="@+id/backImg"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:padding="8dp"
        android:src="@drawable/back2" />


</FrameLayout>